Blog: better image on release post

--- a/site/blog/2023-03-04-ratos-v2-0-0-released.mdx
+++ b/site/blog/2023-03-04-ratos-v2-0-0-released.mdx
@@ -7,7 +7,7 @@ tags: [RatOS, Releases]
 
 ## RatOS V2.0.0 is now released!
 
-![RatOS](/img/logos/Type.png)
+![RatOS](/img/logos/Logo-white.svg)
 
 This is a huge milestone and I'm very excited to finally release RatOS V2.0.0!
 
