Blog: fix moonraker config path

--- a/site/blog/2022-10-17-moonraker-config-changes.mdx
+++ b/site/blog/2022-10-17-moonraker-config-changes.mdx
@@ -15,7 +15,7 @@ Users who installed RatOS before 1.2.1 have an unmanaged moonraker config, this 
 
 ## Checking if your moonraker config is managed
 
-To check if you have a managed config (and thus don't need to do anything besides clicking the update buttons), you can look in your moonraker.conf for `[include RatOS/moonraker.conf]`, if that is present, you have a managed moonraker config. If it's not, you have an unmanaged config, and you'll have to follow the instructions in the notification, if any is present.
+To check if you have a managed config (and thus don't need to do anything besides clicking the update buttons), you can look in your moonraker.conf for `[include config/moonraker.conf]`, if that is present, you have a managed moonraker config. If it's not, you have an unmanaged config, and you'll have to follow the instructions in the notification, if any is present.
 
 ## Missing files after update
 
